--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/deno/vite.config.ts",
+    "build.server": "vite build -c adapters/express/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
@@ -24,7 +24,7 @@
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
-    "serve": "deno run --allow-net --allow-read --allow-env src/entry.deno.ts",
+    "serve": "node server/entry.express",
     "start": "vite --open --mode ssr",
     "qwik": "qwik"
   },
@@ -33,16 +33,22 @@
     "@builder.io/qwik-city": "^1.5.7",
     "@qwik-ui/headless": "^0.4.4",
     "@qwikest/icons": "^0.0.13",
+    "@types/compression": "^1.7.2",
     "@types/eslint": "^8.56.10",
+    "@types/express": "^4.17.19",
     "@types/node": "^20.12.7",
     "@types/ramda": "^0.30.0",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
+    "compression": "^1.7.4",
+    "dotenv": "^16.3.2",
     "eslint": "^8.57.0",
     "eslint-plugin-qwik": "^1.5.7",
+    "express": "4.19.2",
     "prettier": "^3.2.5",
     "ramda": "^0.30.1",
     "sass": "^1.77.5",
+    "sqlite3": "^5.1.7",
     "typescript": "5.4.5",
     "undici": "*",
     "vite": "^5.2.10",
